Bug 512424 - KOrganizer segfaults when adding a CalDav calendar
Summary: KOrganizer segfaults when adding a CalDav calendar
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2025-11-21 09:21 UTC by Cre8or
Modified: 2025-11-21 13:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/293336/events/331e4824f02b482dab459d85de85bdf8/


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cre8or 2025-11-21 09:21:40 UTC
Application: akonadi_davgroupware_resource (6.5.3 (25.08.3))

ApplicationNotResponding [ANR]: false
Qt Version: 6.10.0
Frameworks Version: 6.20.0
Operating System: Linux 6.17.8-arch1-1 x86_64
Windowing System: Wayland
Distribution: "Arch Linux"
DrKonqi: 6.5.2 [CoredumpBackend]

-- Information about the crash:
When attempting to add a self-hosted CalDav calendar to KOrganizer, I get a crash report (due to a segmentation fault?) upon applying my submitted calendar configuration. Effectively, right as the program is trying to retrieve the calendar from the remote host, the crash occurs.

KOrganizer does not shut down during this process - I'm guessing it's spawning a new thread to fetch the calendar, and that is what's crashing. Either way, since the configuration panel stays open, I can reproduce the crash by clicking the "Apply" button. The calendar is not added to KOrganizer, so I effectively cannot use CalDav at all.

The crash can be reproduced every time.

-- Backtrace:
Application: Private (akonadi_davgroupware_resource), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = <optimized out>}
[New LWP 67903]
[New LWP 67907]
[New LWP 67906]
[New LWP 67934]
[New LWP 67933]
[New LWP 68592]
[New LWP 67936]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/usr/lib/libthread_db.so.1".
Core was generated by `/usr/bin/akonadi_davgroupware_resource --identifier akonadi_davgroupware_resour'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=11, no_tid=no_tid@entry=0) at pthread_kill.c:44
44	      return INTERNAL_SYSCALL_ERROR_P (ret) ? INTERNAL_SYSCALL_ERRNO (ret) : 0;
[Current thread is 1 (Thread 0x7f046f19da40 (LWP 67903))]

Downloading 2.48 K source file /usr/src/debug/glibc/glibc/misc/../sysdeps/unix/sysv/linux/x86_64/clone3.S...
Downloading 34.87 K source file /usr/src/debug/glibc/glibc/nptl/pthread_create.c...
Downloading 2.27 K source file /usr/src/debug/glibc/glibc/io/../sysdeps/unix/sysv/linux/ppoll.c...
Downloading 4.24 K source file /usr/src/debug/glibc/glibc/nptl/cancellation.c...
Downloading 1.79 K source file /usr/src/debug/glibc/glibc/nptl/../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S...
Downloading 1.49 K source file /usr/src/debug/glibc/glibc/misc/../sysdeps/unix/sysv/linux/x86_64/syscall.S...
Downloading 34.67 K source file /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread_unix.cpp...
Downloading 10.11 K source file /usr/src/debug/qt6-base/qtbase/src/dbus/qdbusconnectionmanager.cpp...
Downloading 41.39 K source file /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread.cpp...
[Current thread is 1 (Thread 0x7f046f19da40 (LWP 67903))]

Thread 7 (Thread 0x7f0457fff6c0 (LWP 67936)):
#0  __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
#1  0x00007f047529316c in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:49
#2  0x00007f04752931b4 in __syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:75
#3  0x00007f047530d9f6 in __GI_ppoll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>, sigmask=<optimized out>) at ../sysdeps/unix/sysv/linux/ppoll.c:42
#4  0x00007f0474f2c784 in ?? () from /usr/lib/libglib-2.0.so.0
#5  0x00007f0474f2ca17 in g_main_loop_run () from /usr/lib/libglib-2.0.so.0
#6  0x00007f0473748264 in ?? () from /usr/lib/libgio-2.0.so.0
#7  0x00007f0474f638bc in ?? () from /usr/lib/libglib-2.0.so.0
#8  0x00007f047529698b in start_thread (arg=<optimized out>) at pthread_create.c:448
#9  0x00007f047531a9cc in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 6 (Thread 0x7f046cae06c0 (LWP 68592)):
#0  syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1  0x00007f0474f5c7be in g_cond_wait_until () from /usr/lib/libglib-2.0.so.0
#2  0x00007f0474ef2197 in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f0474f652db in ?? () from /usr/lib/libglib-2.0.so.0
#4  0x00007f0474f638bc in ?? () from /usr/lib/libglib-2.0.so.0
#5  0x00007f047529698b in start_thread (arg=<optimized out>) at pthread_create.c:448
#6  0x00007f047531a9cc in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 5 (Thread 0x7f046dae26c0 (LWP 67933)):
#0  syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1  0x00007f0474f5b82e in g_cond_wait () from /usr/lib/libglib-2.0.so.0
#2  0x00007f0474ef21cd in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f0474f64487 in ?? () from /usr/lib/libglib-2.0.so.0
#4  0x00007f0474f638bc in ?? () from /usr/lib/libglib-2.0.so.0
#5  0x00007f047529698b in start_thread (arg=<optimized out>) at pthread_create.c:448
#6  0x00007f047531a9cc in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 4 (Thread 0x7f046d2e16c0 (LWP 67934)):
#0  __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
#1  0x00007f047529316c in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:49
#2  0x00007f04752931b4 in __syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:75
#3  0x00007f047530d9f6 in __GI_ppoll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>, sigmask=<optimized out>) at ../sysdeps/unix/sysv/linux/ppoll.c:42
#4  0x00007f0474f2c784 in ?? () from /usr/lib/libglib-2.0.so.0
#5  0x00007f0474f2c865 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#6  0x00007f0474f2c8b2 in ?? () from /usr/lib/libglib-2.0.so.0
#7  0x00007f0474f638bc in ?? () from /usr/lib/libglib-2.0.so.0
#8  0x00007f047529698b in start_thread (arg=<optimized out>) at pthread_create.c:448
#9  0x00007f047531a9cc in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 3 (Thread 0x7f046edff6c0 (LWP 67906)):
#0  __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
#1  0x00007f047529316c in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:49
#2  0x00007f04752931b4 in __syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:75
#3  0x00007f047530d9f6 in __GI_ppoll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>, sigmask=<optimized out>) at ../sysdeps/unix/sysv/linux/ppoll.c:42
#4  0x00007f0474f2c784 in ?? () from /usr/lib/libglib-2.0.so.0
#5  0x00007f0474f2c865 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#6  0x00007f0475e4a9d2 in QEventDispatcherGlib::processEvents (this=0x7f0468000be0, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#7  0x00007f0475b75a86 in QEventLoop::processEvents (this=0x7f046edfeac0, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventloop.cpp:104
#8  QEventLoop::exec (this=0x7f046edfeac0, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventloop.cpp:186
#9  0x00007f0475c8af7e in QThread::exec (this=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread.cpp:672
#10 0x00007f0475d30ca9 in operator() (__closure=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread_unix.cpp:437
#11 (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread_unix.cpp:367
#12 QThreadPrivate::start (arg=0x562301a23c00) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread_unix.cpp:397
#13 0x00007f047529698b in start_thread (arg=<optimized out>) at pthread_create.c:448
#14 0x00007f047531a9cc in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 2 (Thread 0x7f046e5fe6c0 (LWP 67907)):
#0  __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
#1  0x00007f047529316c in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:49
#2  0x00007f04752931b4 in __syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:75
#3  0x00007f047530d9f6 in __GI_ppoll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>, sigmask=<optimized out>) at ../sysdeps/unix/sysv/linux/ppoll.c:42
#4  0x00007f0474f2c784 in ?? () from /usr/lib/libglib-2.0.so.0
#5  0x00007f0474f2c865 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#6  0x00007f0475e4a9d2 in QEventDispatcherGlib::processEvents (this=0x7f0460000be0, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#7  0x00007f0475b75a86 in QEventLoop::processEvents (this=0x7f046e5fda70, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventloop.cpp:104
#8  QEventLoop::exec (this=0x7f046e5fda70, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventloop.cpp:186
#9  0x00007f0475c8af7e in QThread::exec (this=this@entry=0x7f04761feda0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread.cpp:672
#10 0x00007f047617963e in QDBusConnectionManager::run (this=0x7f04761feda0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/debug/qt6-base/qtbase/src/dbus/qdbusconnectionmanager.cpp:145
#11 0x00007f0475d30ca9 in operator() (__closure=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread_unix.cpp:437
#12 (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread_unix.cpp:367
#13 QThreadPrivate::start (arg=0x7f04761feda0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread_unix.cpp:397
#14 0x00007f047529698b in start_thread (arg=<optimized out>) at pthread_create.c:448
#15 0x00007f047531a9cc in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 1 (Thread 0x7f046f19da40 (LWP 67903)):
[KCrash Handler]
#5  0x00007f04771e7920 in KDAV::DavUrl::url (this=this@entry=0x0) at /usr/src/debug/kdav/kdav-6.20.0/src/common/davurl.cpp:47
#6  0x0000562300a751e5 in DavGroupwareResource::iconForDavUrl(KDAV::DavUrl const&) [clone .isra.0] (davUrl=..., this=0x7fffa1673040) at /usr/src/debug/kdepim-runtime/kdepim-runtime-25.08.3/resources/dav/resource/davgroupwareresource.cpp:749
#7  0x0000562300a77618 in DavGroupwareResource::onReloadConfig (this=0x7fffa1673040) at /usr/include/qt6/QtCore/qlist.h:124
#8  0x00007f0475bd716f in QtPrivate::QSlotObjectBase::call (this=<optimized out>, r=<optimized out>, a=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobjectdefs_impl.h:461
#9  doActivate<false> (sender=<optimized out>, signal_index=<optimized out>, argv=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:4255
#10 0x00007f04771a2f82 in Akonadi__ControlAdaptor::qt_metacall (this=0x562301a2a5f0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7fffa1672648) at /usr/src/debug/akonadi/build/src/agentbase/moc_controladaptor.cpp:148
#11 0x00007f0476184291 in QDBusConnectionPrivate::deliverCall (this=this@entry=0x7f0460001480, object=object@entry=0x562301a2a5f0, msg=..., metaTypes=..., slotIdx=10) at /usr/src/debug/qt6-base/qtbase/src/dbus/qdbusintegrator.cpp:1008
#12 0x00007f0476185189 in QDBusConnectionPrivate::activateCall (this=this@entry=0x7f0460001480, object=0x562301a2a5f0, flags=..., flags@entry=..., msg=...) at /usr/src/debug/qt6-base/qtbase/src/dbus/qdbusintegrator.cpp:910
#13 0x00007f04761883d7 in QDBusConnectionPrivate::activateObject (this=0x7f0460001480, node=..., msg=..., pathStartPos=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/dbus/qdbusintegrator.cpp:1485
#14 0x00007f047618978a in QDBusActivateObjectEvent::placeMetaCall (this=0x7f0460016390) at /usr/src/debug/qt6-base/qtbase/src/dbus/qdbusintegrator.cpp:1605
#15 0x00007f0475bc4554 in QObject::event (this=<optimized out>, e=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:1411
#16 0x00007f0475b6a670 in doNotify (receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1210
#17 QCoreApplication::notify (this=<optimized out>, receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1193
#18 QCoreApplication::notifyInternal2 (receiver=0x7fffa1673040, event=event@entry=0x7f0460016390) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1109
#19 0x00007f0475b6aab2 in QCoreApplication::sendEvent (receiver=<optimized out>, event=0x7f0460016390) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1549
#20 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x562301a19da0) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1904
#21 0x00007f0475e4db18 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1757
#22 postEventSourceDispatch (s=0x562301a1d610) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:246
#23 0x00007f0474f2af8d in ?? () from /usr/lib/libglib-2.0.so.0
#24 0x00007f0474f2c657 in ?? () from /usr/lib/libglib-2.0.so.0
#25 0x00007f0474f2c865 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#26 0x00007f0475e4a9d2 in QEventDispatcherGlib::processEvents (this=0x562301a1d350, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#27 0x00007f0475b75a86 in QEventLoop::processEvents (this=0x7fffa1672f00, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventloop.cpp:104
#28 QEventLoop::exec (this=0x7fffa1672f00, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventloop.cpp:186
#29 0x00007f0475b6f171 in QCoreApplication::exec () at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1452
#30 0x00007f047716e1c3 in Akonadi::AgentBase::init (r=...) at /usr/src/debug/akonadi/akonadi-25.08.3/src/agentbase/agentbase.cpp:861
#31 0x0000562300a5c5b3 in Akonadi::AgentBase::initCore<DavGroupwareResource> (argc=<optimized out>, argv=<optimized out>) at /usr/include/KPim6/AkonadiAgentBase/akonadi/agentbase.h:449
#32 main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kdepim-runtime/kdepim-runtime-25.08.3/resources/dav/resource/davgroupwareresource.cpp:1530

Reported using DrKonqi
Comment 1 Bug Janitor Service 2025-11-21 11:58:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/272
Comment 2 Allen Winter 2025-11-21 13:13:15 UTC
Git commit bb512cbc92d4847ceaf522925bee1c805a9ee7de by Allen Winter.
Committed on 21/11/2025 at 11:55.
Pushed by winterz into branch 'master'.

Prevent crash if the dav url list is empty
FIXED-IN: 6.6.0

M  +2    -2    resources/dav/resource/davgroupwareresource.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/bb512cbc92d4847ceaf522925bee1c805a9ee7de
Comment 3 Allen Winter 2025-11-21 13:13:37 UTC
Git commit 6862039c9e969b60d2358a45d321c06240a48470 by Allen Winter.
Committed on 21/11/2025 at 13:13.
Pushed by winterz into branch 'release/25.12'.

Prevent crash if the dav url list is empty
FIXED-IN: 6.6.0


(cherry picked from commit bb512cbc92d4847ceaf522925bee1c805a9ee7de)

Co-authored-by: Allen Winter <winter@kde.org>

M  +2    -2    resources/dav/resource/davgroupwareresource.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/6862039c9e969b60d2358a45d321c06240a48470