Prevent crash if the dav url list is empty

BUG: 512424
FIXED-IN: 6.6.0


(cherry picked from commit bb512cbc92d4847ceaf522925bee1c805a9ee7de)

Co-authored-by: Allen Winter <winter@kde.org>